# Pomodoro_llanero

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  pages.yml  release.yml
docs/: DECISIONS.md
docs/media/: README.md
public/fauna/: README.md  fauna.json  fauna.schema.json
scripts/: gen-placeholders.mjs  placeholder.mjs  sync-fauna.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src/components/: BreakScreen.tsx  CelebrationOverlay.tsx  Controls.tsx  FaunaCompanion.tsx  GarceroCounter.tsx  SettingsPanel.tsx  ShortcutInput.tsx  StatsPanel.tsx  TimerRing.tsx  TimerView.tsx  TopBar.tsx  ui.tsx
src/components/fauna/: Caiman.tsx  Chiguiro.tsx  Corocora.tsx  Garza.tsx  PalmaLlanera.tsx  Tonina.tsx
src/domain/: defaults.ts  index.ts  stats.test.ts  stats.ts  timer.test.ts  timer.ts  types.ts
src/fauna/: GenerativeProvider.ts  ImageProvider.ts  LocalGalleryProvider.test.ts  LocalGalleryProvider.ts  index.ts  shuffler.test.ts  shuffler.ts
src/hooks/: useDayState.ts  useShortcuts.ts  useT.ts
src/i18n/: en.ts  es.ts  index.ts
src/infra/: autostart.ts  clock.test.ts  clock.ts  env.ts  generate.ts  index.ts  notifications.ts  secrets.ts  sound.ts  stats.ts  store.ts  tray.ts  window.ts
src/lib/: asset.ts  format.ts
src/state/: controller.ts  store.ts
