[package]
name = "pomodoro-llanero"
version = "0.2.0"
description = "Pomodoro de escritorio local-first con fauna del Llano colombiano"
authors = ["Felipe Castellanos"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# El binario de la librería se usa también en móvil; mantenemos ambos targets.
[lib]
name = "pomodoro_llanero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Almacén seguro de secretos (clave de API del modo generativo) en el llavero
# del sistema (Keychain en macOS, Credential Manager en Windows).
keyring = "2"

[features]
# Por defecto Tauri compila con la verificación de actualizaciones desactivada.
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
